Fixed bug display on smaller devices

--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -4,9 +4,14 @@
     flex-direction: column;
     height: 100vh;
     overflow: scroll;
+    
+    
     scroll-snap-type: proximity;
     scroll-snap-points-y: repeat(100vh);
     scroll-snap-type: y proximity;
+
+
+
     padding-left: 8rem;
     max-width: 140rem;
 }
@@ -27,13 +32,17 @@
 
 @media (max-width: 1186px){
     .projects {
-        padding-right: 8rem;    
+        padding-right: 8rem;   
+        height: unset; 
+        scroll-snap-type: none;
+        scroll-snap-points-y: unset;
+        scroll-snap-type: none;
     }
     .project {
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: max-content;
+        height: unset;
         min-height: unset;
         width: 70vw;
     }
@@ -45,7 +54,8 @@
 @media (max-width: 690px){
     .projects {
         padding-right: 0;    
-        padding-left: 0;
+        padding-left: 0;       
+        
     }
 
     .project {
